Fixed a bug in the process based launcher that was preventing Intkey from launching from the Editor.
git-svn-id: https://open-delta.googlecode.com/svn/trunk@1915 dd429c29-c832-59a0-e864-46e68368aa0b